--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,14 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.1'
+
+
+    compile 'com.jakewharton.timber:timber:4.5.1'
+
+    compile 'com.android.support:design:26.+'
+    compile 'com.android.support:appcompat-v7:26+'
+    compile 'com.android.support:cardview-v7:26.+'
 }
