--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     compile 'com.google.dagger:dagger:2.11'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
     compile 'com.google.dagger:dagger-android-support:2.11'
+    testCompile "org.mockito:mockito-core:2.+"
+    testCompile 'junit:junit:4.12'
 
 
 
